test/basic/good/core058.lat
int main() {
	int x = 1;
	if (true) {
		int x = 2;
		printInt(x);
	}
	printInt(x);
	return 0;
}
