test/basic/bad/core012.lat
int main() {
    while (true) {
        if (readInt() == 1)
            return 0;
    }
}
